# tinkering-with-claude-code

./: .gitignore  conftest.py  main.py  pyproject.toml  run_research.py
.claude/hooks/: hooks.json
PRPs/: INITIAL.md  research_agent.md
src/: __init__.py  models.py  providers.py  research_agent.py  settings.py
src/tests/: __init__.py  conftest.py  test_brave_integration.py  test_main.py  test_research_agent.py
